samples/_failures_safe/1761318961_c91639_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_45ef1ca2.c: In function ‘tokenize’:
./samples/SAFE/__tmp_45ef1ca2.c:148:13: error: expected expression at end of input
  148 |             strncpy(tokens[token_count].value, buffer, MAX_TOKEN_LEN -
      |             ^~~~~~~
./samples/SAFE/__tmp_45ef1ca2.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_45ef1ca2.c:148:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_45ef1ca2.c:148:13: error: expected declaration or statement at end of input
